--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "scripts": {
     "start": "cross-env-shell NODE_ENV=development react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "build-run": "npm run build && node server/index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +44,13 @@
     ]
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "redux-logger": "^3.0.6"
+    "express": "^4.18.2",
+    "html-webpack-plugin": "^5.5.0",
+    "redux-logger": "^3.0.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   }
 }
